; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap1/extr_board-ams-delta.c_ams_delta_latch1_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap1/extr_board-ams-delta.c_ams_delta_latch1_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ams_delta_latch1_reg = common dso_local global i32 0, align 4
@AMS_DELTA_LATCH1_VIRT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ams_delta_latch1_write(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = xor i32 %5, -1
  %7 = load i32, i32* @ams_delta_latch1_reg, align 4
  %8 = and i32 %7, %6
  store i32 %8, i32* @ams_delta_latch1_reg, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @ams_delta_latch1_reg, align 4
  %11 = or i32 %10, %9
  store i32 %11, i32* @ams_delta_latch1_reg, align 4
  %12 = load i32, i32* @ams_delta_latch1_reg, align 4
  %13 = load i64, i64* @AMS_DELTA_LATCH1_VIRT, align 8
  %14 = inttoptr i64 %13 to i32*
  store volatile i32 %12, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
